== 3030-12-31 Getting Started
<p>If you're new to Constellation, read the <a href="" helpId="au.gov.asd.tac.constellation.functionality.gettingstarted">getting started guide</a>.</p>

== 2022-04-13 Plugins
<p>Some plugin parameters have been updated to have '*' at the end of the name to indicate that the plugin will require a value in order for the plugin to work.</p>

== 2022-03-30 Data Access View
<p>A new tab has been added in SetUp -&gt; Options -&gt; Data Access View to be able to hide data access categories that you don't want to see.</p>

== 2022-03-22 New Datetime formatter in the File Importer
<p>A new Datetime formatter has been added to the File Importer for parsing native Excel datetimes into Constellation. You can use it by right-clicking an attribute, navigating to Formatter -&gt; Datetime and choosing 'EXCEL' from the format dropdown list.</p>

== 2022-02-22 Find View (Experimental)
<p>A new version of the Find View can be accessed via Experimental -&gt; Views or Ctrl + B. This version is intended to replace the current Find View at some stage.</p>

== 2022-02-21 Compare Graph Parameters
<p>The dialog for comparing graphs in the Tools -&gt; Compare graph menu will now update to prevent the user from comparing against the original graph.</p>

== 2022-02-17 Add description to Step Tab names in Data Access View
<p> The Step Tab names in the Data Access View can now be double clicked to add a brief description. E.g. If "Initial run" is entered, "Step 1 - Initial run" will be displayed in the Tab name. This is also saved and loaded as part of the templates.</p>

== 2022-01-24 Histogram Bins Selected Count
<p>The Histogram now shows the amount of bins selected out of the total bins present.</p>

== 2022-01-21 File Importer
<p>File Importer enforces all files that are being added have the same column structure.
When the 'Files Include Headers' option is enabled, the column headings of all the files should be the same. When it is disabled,